added first question

--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>question answear </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
   <body class="container mt-4">
@@ -12,8 +12,15 @@
     <!-- question 1 -->
     <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <h5 class="card-title">What is The Differences Map, filter, foreach , find</h5>
+          <p class="card-text">
+            <ul>
+                <li><b>Map:</b> if We applay Map method of the array , its applaying a function per element on the array then give a return array</li>
+                <li><b>Filter:</b> if We applay Filter method of the array , and we can put a condition, if condition are true then give return all of them that is true </li>
+                <li><b>Find:</b> if We applay Find method of the array , and we can put a condition, if condition are true then give a return value and return just first one  </li>
+                <li><b>foreach:</b> if We applay foreach method of the array , this method  no return a new array , its just executes each element</li>
+            </ul>
+          </p>
         </div>
       </div>
 
