added some question

--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,35 @@
     <!-- question 1 -->
     <div class="card">
         <div class="card-body">
-          <h5 class="card-title">What is The Differences Map, filter, foreach , find</h5>
+          <h5 class="card-title">What is The Differences between Map, filter, foreach , find</h5>
+          <p class="card-text">
+            <ul>
+                <li><b>Map:</b> if We applay Map method of the array , its applaying a function per element on the array then give a return array</li>
+                <li><b>Filter:</b> if We applay Filter method of the array , and we can put a condition, if condition are true then give return all of them that is true </li>
+                <li><b>Find:</b> if We applay Find method of the array , and we can put a condition, if condition are true then give a return value and return just first one  </li>
+                <li><b>foreach:</b> if We applay foreach method of the array , this method  no return a new array , its just executes each element</li>
+            </ul>
+          </p>
+        </div>
+      </div>
+    <!-- question 2 -->
+    <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">What is The Differences between Local Storage , Session Storage , cookie</h5>
+          <p class="card-text">
+            <ul>
+                <li><b>Map:</b> if We applay Map method of the array , its applaying a function per element on the array then give a return array</li>
+                <li><b>Filter:</b> if We applay Filter method of the array , and we can put a condition, if condition are true then give return all of them that is true </li>
+                <li><b>Find:</b> if We applay Find method of the array , and we can put a condition, if condition are true then give a return value and return just first one  </li>
+                <li><b>foreach:</b> if We applay foreach method of the array , this method  no return a new array , its just executes each element</li>
+            </ul>
+          </p>
+        </div>
+      </div>
+    <!-- question 3 -->
+    <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">What is event loop</h5>
           <p class="card-text">
             <ul>
                 <li><b>Map:</b> if We applay Map method of the array , its applaying a function per element on the array then give a return array</li>
