--- a/blog.html
+++ b/blog.html
@@ -29,10 +29,9 @@
           <h5 class="card-title">What is The Differences between Local Storage , Session Storage , cookie</h5>
           <p class="card-text">
             <ul>
-                <li><b>Map:</b> if We applay Map method of the array , its applaying a function per element on the array then give a return array</li>
-                <li><b>Filter:</b> if We applay Filter method of the array , and we can put a condition, if condition are true then give return all of them that is true </li>
-                <li><b>Find:</b> if We applay Find method of the array , and we can put a condition, if condition are true then give a return value and return just first one  </li>
-                <li><b>foreach:</b> if We applay foreach method of the array , this method  no return a new array , its just executes each element</li>
+                <li><b>Local Storage:</b> Local Storage keep stored data, its data stored permenantly if user not deleted / clear data, and its stored always string </li>
+                <li><b>Session Storage:</b> Session Storage save data as short priod , if you close the browser tab then data gose to gone or removed </li>
+                <li><b>Cookies:</b> Cookies stored small text that are stored in the  browser. Cookies normally used to store user's activity on the website like  login credentials  shopping cart items, and other data. </li>
             </ul>
           </p>
         </div>
@@ -42,12 +41,7 @@
         <div class="card-body">
           <h5 class="card-title">What is event loop</h5>
           <p class="card-text">
-            <ul>
-                <li><b>Map:</b> if We applay Map method of the array , its applaying a function per element on the array then give a return array</li>
-                <li><b>Filter:</b> if We applay Filter method of the array , and we can put a condition, if condition are true then give return all of them that is true </li>
-                <li><b>Find:</b> if We applay Find method of the array , and we can put a condition, if condition are true then give a return value and return just first one  </li>
-                <li><b>foreach:</b> if We applay foreach method of the array , this method  no return a new array , its just executes each element</li>
-            </ul>
+            In JavaScript, asynchronous items are stored in the Queue and synchronous items are stored in the Stack. When the tasks of the Stack are executed, then the tasks in the Queue are executed in the Stack. And this whole work is done through Event Loop. This is the concept of event loop
           </p>
         </div>
       </div>
