added two function summary

--- a/blog.html
+++ b/blog.html
@@ -46,6 +46,30 @@
         </div>
       </div>
 
+      <div class="card mt-4">
+        <div class="card-body">
+          <h5 class="card-title">quizTimer Function summary</h5>
+          <p class="card-text">
+            When called the function and dismiss set to true, the timer is stopped and cleared using the clearInterval() function.
+
+            When called the function and dismiss set to  false or any other truthy value, the timer is started using the setInterval() function. This function executes an anonymous function every 1000 milliseconds (1 second). <b>This function mainly work How many time are you spend take quiz </b>
+          </p>
+        </div>
+      </div>
+
+      <div class="card mt-4">
+        <div class="card-body">
+          <h5 class="card-title">chooseQuiz Function summary</h5>
+          <p class="card-text">
+            chooseQuiz function is  JavaScript function that takes two arguments: index and givenAns. This function is responsible for updating the answers array with the answer given by the user for a particular quiz question.
+
+            <p>
+               Mainly when i select a answare then through loop for all answare data and compare selcet item answare and previous answare ,, this give a array new secelt item and show the display that answare i selected 
+            </p>
+          </p>
+        </div>
+      </div>
+
 
 
 
