fixed some known issue

--- a/blog.html
+++ b/blog.html
@@ -64,7 +64,7 @@
             chooseQuiz function is  JavaScript function that takes two arguments: index and givenAns. This function is responsible for updating the answers array with the answer given by the user for a particular quiz question.
 
             <p>
-               Mainly when i select a answare then through loop for all answare data and compare selcet item answare and previous answare ,, this give a array new secelt item and show the display that answare i selected 
+                when i select answare item then return one selected item and if true selected item then make condition for my selected item and stored correct answare item and if conditions have not fullfild then they push my selcet item and display then my selected item with srial number
             </p>
           </p>
         </div>
